--- a/core/Makefile
+++ b/core/Makefile
@@ -1384,7 +1384,13 @@ INTERNAL_SYSTEMIMAGE_FILES := $(filter $(TARGET_OUT)/%, \
     $(PDK_FUSION_SYSIMG_FILES) \
     $(RECOVERY_RESOURCE_ZIP))
 
-FULL_SYSTEMIMAGE_DEPS := $(INTERNAL_SYSTEMIMAGE_FILES) $(INTERNAL_USERIMAGES_DEPS)
+systemimage-crusher: $(INTERNAL_SYSTEMIMAGE_FILES)
+    @echo -e "Optimizing PNGs to Shrink ROM Size!" \
+    $(hide) APKCERTS=$(APKCERTS_FILE) ./build/tools/releasetools/pngcrusher
+
+.PHONY: systemimage-crusher
+
+FULL_SYSTEMIMAGE_DEPS := $(INTERNAL_SYSTEMIMAGE_FILES) $(INTERNAL_USERIMAGES_DEPS) systemimage-crusher
 
 ifeq ($(BOARD_BUILD_SYSTEM_ROOT_IMAGE),true)
     FULL_SYSTEMIMAGE_DEPS += $(INSTALLED_KERNEL_TARGET)
